# KiKiDemo

./: README.md  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/qytech/kikidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/qytech/kikidemo/: GlobalApplication.kt  MainActivity.kt
app/src/main/java/com/qytech/kikidemo/ui/camera/: CameraFragment.kt  CameraViewModel.kt
app/src/main/java/com/qytech/kikidemo/ui/main/: MainFragment.kt  MainViewModel.kt
app/src/main/java/com/qytech/kikidemo/utils/: ContextExt.kt  FileUtils.kt  LuminosityAnalyzer.kt  ShellUtils.kt
app/src/main/res/drawable/: ic_baseline_camera.xml  ic_baseline_videocam.xml
app/src/main/res/layout/: camera_fragment.xml  main_activity.xml  main_fragment.xml
app/src/main/res/navigation/: main_navigation.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/qytech/kikidemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
